# MLAG

./: INSTALL  Makefile.am  README  autoclean.sh  autogen.sh  configure.in  install_mlag.sh
include/: mlag_api.h  mlag_api_defs.h
src/: Makefile.am  mlag_conf.c  mlag_conf.h  mlag_init.c  mlag_init.h  mlag_main.c  mlag_main.h
src/api/: Makefile.am  mlag_api.c
src/libs/health_manager/: Makefile.am  health_dispatcher.c  health_dispatcher.h  health_fsm.c  health_fsm.h  health_manager.c  health_manager.h  heartbeat.c  heartbeat.h
src/libs/lacp_manager/: Makefile.am  lacp_db.c  lacp_db.h  lacp_manager.c  lacp_manager.h
src/libs/mlag_common/: Makefile.am  mlag_comm_layer_wrapper.c  mlag_comm_layer_wrapper.h  mlag_common.c  mlag_common.h
src/libs/mlag_internal_api/: Makefile.am  mlag_api_rpc.h  mlag_internal_api.c  mlag_internal_api.h
src/libs/mlag_l3_interface_manager/: Makefile.am  mlag_l3_interface_manager.c  mlag_l3_interface_manager.h  mlag_l3_interface_master_logic.c  mlag_l3_interface_master_logic.h  mlag_l3_interface_peer.c  mlag_l3_interface_peer.h
src/libs/mlag_mac_sync/: Makefile.am  mac_sync_events.h  mlag_mac_sync_dispatcher.c  mlag_mac_sync_dispatcher.h  mlag_mac_sync_flush_fsm.c  mlag_mac_sync_flush_fsm.h  mlag_mac_sync_manager.c  mlag_mac_sync_manager.h  mlag_mac_sync_master_logic.c  mlag_mac_sync_master_logic.h  mlag_mac_sync_peer_manager.c  mlag_mac_sync_peer_manager.h  mlag_mac_sync_router_mac_db.c  mlag_mac_sync_router_mac_db.h
src/libs/mlag_mac_sync/GML/: mlag_mac_sync_flush_fsm.gml  mlag_mac_sync_flush_fsm.gmlbk
src/libs/mlag_manager/: Makefile.am  mlag_dispatcher.c  mlag_dispatcher.h  mlag_manager.c  mlag_manager.h  mlag_manager_db.c  mlag_manager_db.h  mlag_peering_fsm.c  mlag_peering_fsm.h
src/libs/mlag_master_election/: Makefile.am  mlag_master_election.c  mlag_master_election.h  mlag_master_election_fsm.c  mlag_master_election_fsm.h
src/libs/mlag_master_election/GML/: Thumbs.db  mlag_master_election_fsm.gml  mlag_master_election_fsm.gmlbk
src/libs/mlag_topology/: Makefile.am  mlag_topology.c  mlag_topology.h
src/libs/mlag_tunneling/: Makefile.am  mlag_tunneling.c  mlag_tunneling.h
src/libs/notification_layer/: Makefile.am  notification_layer.c  notification_layer.h
src/libs/port_manager/: Makefile.am  port_db.c  port_db.h  port_manager.c  port_manager.h  port_master_logic.c  port_master_logic.h  port_peer_local.c  port_peer_local.h  port_peer_remote.c  port_peer_remote.h
src/libs/service_layer/: Makefile.am  service_layer.c  service_layer.h
src/utils/: mlag_bail.h  mlag_defs.h  mlag_events.h  mlag_log.h
