# Makefile.am -- Process this file with automake to produce Makefile.in

# note that order matters: make the lib first then use it
SUBDIRS = 	src/libs/mlag_common \
		src/libs/port_manager \
		src/libs/lacp_manager \
	  	src/libs/mlag_manager \
		src/libs/mlag_topology \
		src/libs/health_manager \
		src/libs/mlag_master_election \
		src/libs/notification_layer \
		src/libs/service_layer \
		src/libs/mlag_l3_interface_manager \
		src/libs/mlag_internal_api \
		src/libs/mlag_mac_sync \
		src/libs/mlag_tunneling \
		src/api \
		src/

DIST_SUBDIRS = 	src/libs/mlag_common \
		src/libs/port_manager \
		src/libs/lacp_manager \
		src/libs/mlag_manager \
		src/libs/mlag_topology \
		src/libs/health_manager \
		src/libs/mlag_master_election \
		src/libs/notification_layer \
		src/libs/service_layer \
		src/libs/mlag_l3_interface_manager \
		src/libs/mlag_internal_api \
		src/libs/mlag_mac_sync \
		src/libs/mlag_tunneling \
		src/api \
		src/
